Commit for fixing friends and group tab layout, overflow on subpage slots, and design additions and customizations

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@
   border-radius: 1.5vw;
 }
 
-
 body {
   background-color: rgb(21, 21, 25);
   color: white;
@@ -45,12 +44,11 @@ input:focus {
 }
 
 .HeaderTitle {
-  position: absolute;
-  top: 5px;
-  left: 10px;
+  position: absolute;;
+  left: 1vw;
   z-index: 0;
   justify-content: end;
-  font-size: 18px;
+  font-size: 1vw;
   user-select: none;
 }
 
@@ -82,7 +80,7 @@ input:focus {
   align-items: left;
   justify-content: left;
   background-color:  rgb(21, 21, 25);
-  height: 93vh;
+  height: 90vh;
 }
 
 .Subpage {
@@ -312,7 +310,13 @@ input:focus {
 .FeedPost-PosterInfo {
   font-size: 1.25vw;
   font-weight: bold;
-  padding-bottom: 1vw;
+}
+
+.FeedPost-DateInfo {
+  font-style: italic;
+  color: var(--lighter-light);
+  margin-block-start: 1vh;
+  margin-block-end: 1em;
 }
 
 .ActionBar {
@@ -432,29 +436,30 @@ input:focus {
 .FriendSuggestions-Title {
   background-color: var(--background-color);
   border-radius: 1vw;
-  padding: 0.5vw;
-  padding-bottom: 2vw;
-  width: 70%;
+  padding: 0.5vw 0.5vw 5vh;
+  width: 60%;
   position: absolute;
-  top: -25%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   margin: 2.5vh auto 2.5vh;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 1.5vw;
   user-select: none;
 }
 
 .FriendSuggestion-Description {
+  position: absolute;
+  z-index: 2;
+  padding-top: 2vh;
   overflow-y: scroll;
-  padding-top: 5%;
-  font-size: 2vh;
+  font-size: 2.5vh;
 }
 
 .FriendSuggestionsDiv {
   width: 95%;
-  margin: 1vw auto 0;
+  margin: 0.5vw auto 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 12vw;
@@ -517,38 +522,79 @@ input:focus {
 }
 
 .Groups-HeaderBlock {
+  position: relative;
   display: block;
   align-items: center;
   border-radius: 1vw;
   height: 40%;
-  padding: 1vw;
+  position: relative;
+  padding: 0.2vw 0.5vw 0;
   text-align: left;
   overflow: hidden;
-  width: 90%;
-  background-color: red;
+  width: 95%;
+  background-color: var(--background-color);
   margin: 0 auto 0;
+}
+
+.Groups-GroupPhoto {
+  width: 100%;
+  height: 60%;
+  margin: 0 auto 0;
+  border-radius: 0.5vw;
+  background-image: url('./assets/pictures/group_photo.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.Groups-HeaderTitle {
+  display: block;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--background-color);
+  border-radius: 1vw;
+  font-weight: bold;
+  font-size: 1.5vw;
+  width: 70%;
+  padding: 0.5vw 0.5vw 1.5vw;
+  text-align: center;
+  margin: 0 auto 0;
+  transform: translate(-50%, -50%);
+  user-select: none;
+}
+
+.Groups-HeaderDesc {
+  position: absolute;
+  bottom: 0;
+  font-size: 1.2em;
+  background-color: var(--background-color);
+  width: 95%;
 }
 
 .Groups-Grid {
   display: grid;
+  width: 96%;
+  margin: 0 auto 0;
   grid-template-columns: 1fr;
-  grid-auto-rows: 12vw;
+  grid-auto-rows: 17vw;
   grid-gap: 1vw;
 }
 
 .Groups-GridCell {
-  position: relative;
-  /* border: 0.2vw solid rgb(161, 161, 165); */
-  border-radius: 1vw;
+  position: none;
+  border-top: 0.2vw solid var(--neutral);
+  padding-top: 3vh;
+  padding-bottom: 1vh;
   width: 100%;
-  padding: 1vw;
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 
 .JoinGroupButton {
-  margin: 0 auto 0;
-  width: 95%;
-  min-height: 4%;
+  font-size: 1.6em;
+  margin: 2.5vh auto 0;
+  width: 60%;
   border-radius: 1vw;
   border: 0.2vw solid rgb(161, 161, 165);
   text-align: center;
@@ -571,17 +617,22 @@ input:focus {
 }
 
 .Groups-Name {
+  display: block;
   width: 80%;
-  font-size: 1.7vw;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .Groups-Members {
+  display: block;
   font-style: italic;
+  font-size: 1em;
 }
 
 .Groups-Description {
-  padding-top: 0.4vw;
-  font-size: 0.7em;
+  display: block;
+  display: inline;
+  font-size: 1.2em;
 }
 
 .Groups-Image {
